--- a/dependencies/package.json
+++ b/dependencies/package.json
@@ -58,6 +58,7 @@
     "scratch-sb1-converter": "0.2.7",
     "scratch-translate-extension-languages": "0.0.20191118205314",
     "text-encoding": "0.7.0",
+    "tone": "^15.0.4",
     "worker-loader": "^1.1.1"
   },
   "peerDependencies": {
