--- a/dependencies/package.json
+++ b/dependencies/package.json
@@ -1,6 +1,6 @@
 {
   "name": "scratch-vm",
-  "version": "1.4.17",
+  "version": "1.3.69",
   "description": "Virtual Machine for Scratch 3.0",
   "author": "Massachusetts Institute of Technology",
   "license": "BSD-3-Clause",
@@ -8,7 +8,7 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/LLK/scratch-vm.git",
-    "sha": "a9487a9a8b35ee6cbcbf3f43fcc7a6ee71e09157"
+    "sha": "d54f07ce7fc9b20276f9c776dfb32ec4b482bcc2"
   },
   "main": "./dist/node/scratch-vm.js",
   "browser": "./src/index.js",
@@ -58,7 +58,6 @@
     "scratch-sb1-converter": "0.2.7",
     "scratch-translate-extension-languages": "0.0.20191118205314",
     "text-encoding": "0.7.0",
-    "tone": "^15.0.4",
     "worker-loader": "^1.1.1"
   },
   "peerDependencies": {
@@ -89,12 +88,12 @@
     "lodash.defaultsdeep": "4.6.1",
     "pngjs": "3.3.3",
     "scratch-audio": "0.1.0-prerelease.20221123180128",
-    "scratch-blocks": "0.1.0-prerelease.20230318112504",
-    "scratch-l10n": "3.15.20230318032145",
-    "scratch-render": "0.1.0-prerelease.20230318150639",
+    "scratch-blocks": "0.1.0-prerelease.20230302080617",
+    "scratch-l10n": "3.15.20230302032139",
+    "scratch-render": "0.1.0-prerelease.20230221152523",
     "scratch-render-fonts": "1.0.0-prerelease.20221102164332",
     "scratch-semantic-release-config": "1.0.5",
-    "scratch-storage": "2.1.0",
+    "scratch-storage": "2.0.2",
     "scratch-svg-renderer": "0.2.0-prerelease.20210727023023",
     "script-loader": "0.7.2",
     "semantic-release": "19.0.5",
@@ -104,7 +103,6 @@
     "uglifyjs-webpack-plugin": "1.2.7",
     "webpack": "4.46.0",
     "webpack-cli": "3.1.0",
-    "webpack-dev-server": "3.11.2",
-    "tone": "^15.0.4"
+    "webpack-dev-server": "3.11.2"
   }
 }
